second and third sections, resolved mobile spacing issues

--- a/css/index.new.css
+++ b/css/index.new.css
@@ -5,17 +5,9 @@
 .hero {
   display: flex;
   flex-direction: row;
-  justify-self: center;
-  /* Small margin on top, auto margin to cause content to fit in the center of the screen */
+  justify-content: space-between;
 
-  position: absolute;
-  /* move the element half way across the screen */
-  left: 50%;
-  /* allow the width to be calculated dynamically */
-  /* min-width: 55rem; */
-  width: auto;
-  /* then move the element back again using a transform */
-  transform: translateX(-50%);
+  width: 80%;
   
   margin-top: 2rem;
 }
@@ -25,10 +17,8 @@
 .hero-text {
   width: 25rem;
   max-width: calc(100vw - 2rem);
-
 }
 .hero-img {
-  height: 25rem;
   /* Invisible on mobile devices */
   display: none;
 }
@@ -42,7 +32,6 @@
   line-height: 4rem;
   text-align: center;
   height: 4rem;
-  color: #ffffff;
   font-weight: 700;
   background-color: #4D68B2;
   padding-left: 1rem;
@@ -50,21 +39,56 @@
   margin-top: 3rem;
   width: 165px;
 }
+.black {
+  color: #000000;
+}
+.white {
+  color: #ffffff;
+}
 section {
   height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 #first {
   background-color: #E3DDE1;
+  justify-content: center;
+}
+#first .hero-img {
+  height: 25rem;
 }
 #second {
   background-color: #4D68B2;
+  justify-content: flex-end;
+}
+#second > .hero {
+  align-items: center;
+  padding-right: 2rem;
+}
+#second .hero-img {
+  height: 20rem;
+}
+#second .landing-button {
+  background-color: #3C9AA3;
 }
 #third {
   background-color: #3C9AA3;
+  justify-content: flex-start;
+}
+#third > .hero {
+  align-items: center;
+  padding-left: 2rem;
+}
+#third .hero-img {
+  height: 22rem;
 }
 
 @media only screen and (min-width: 769px) {
+  .hero {
+    width: 60%;
+    max-width: 1000px;
+  }
   .hero-img {
     display: block;
   }
